Fixed archived denotation margin/padding issue on mobile

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -90,6 +90,8 @@
     left: 1rem;
     font-size: 0.6rem;
     transition: color 0.4s ease;
+    padding: 0;
+    margin: 0;
 
     @media only screen and (min-width: 768px) {
       font-size: 0.75rem;
